--- a/src/app/pages/sugerencias/sugerencias.component.html
+++ b/src/app/pages/sugerencias/sugerencias.component.html
@@ -1,1 +1,4 @@
-<p>Este es el componente sugerencias</p>
+<div class="container">
+    <h2 class="p-4 text-center">Este es el componente sugerencias</h2>
+    <hr>
+</div>
