--- a/src/app/pages/articulos/articulos.component.html
+++ b/src/app/pages/articulos/articulos.component.html
@@ -1,27 +1,31 @@
-<h6>Este es el componente artículos</h6>
+<div class="container">
+    <h2 class="p-4 text-center">Este es el componente artículos</h2>
+</div>
+<div class=container>
+    <table mdbTable class="table">
+        <thead>
+            <tr>
+                <th>ARTÍCULO</th>
+                <th>TALLA</th>
+                <th>PRECIO</th>
+                <th>BOTÓN</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr mdbTableCol *ngFor="let a of articulos">
+                <td>{{a.nombre}}</td>
+                <td>{{a.talla}}</td>
+                <ng-template *ngIf="a.check;then this_content;else other_content"></ng-template>
+                <ng-template #this_content>
+                    <td>{{a.texto[0][0]}}</td>
+                    <button class="btn btn-info" (click)="mostrarPrecio(a.id)">{{a.texto[0][1]}}</button>
+                </ng-template>
+                <ng-template #other_content>
+                    <td>{{a.texto[1][0]}}</td>
+                    <button class="btn btn-info" (click)="ocultarPrecio(a.id)">{{a.texto[1][1]}}</button>
+                </ng-template>
+            </tr>
+        </tbody>
+    </table>
+</div>
 
-<table mdbTable class="table">
-    <thead>
-        <tr>
-            <th>ARTÍCULO</th>
-            <th>TALLA</th>
-            <th>PRECIO</th>
-            <th>BOTÓN</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr mdbTableCol *ngFor="let a of articulos">
-            <td>{{a.nombre}}</td>
-            <td>{{a.talla}}</td>
-            <ng-template *ngIf="b;then this_content;else other_content"></ng-template>
-            <ng-template #this_content>
-                <td>{{a.texto[0][0]}}</td>
-                <button class="btn btn-info" (click)="mostrarPrecio()">{{a.texto[0][1]}}</button>
-            </ng-template>
-            <ng-template #other_content>
-                <td>{{a.texto[1][0]}}</td>
-                <button class="btn btn-info" (click)="ocultarPrecio()">{{a.texto[1][1]}}</button>
-            </ng-template>
-        </tr>
-    </tbody>
-</table>
