--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,1 +1,4 @@
-<p>Este es el componente inicio</p>
+<div class="container">
+    <h2 class="p-4 text-center">Este es el componente inicio</h2>
+    <hr>
+</div>
