--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,4 +1,3 @@
-<h3>Menú:</h3>
 <ul class="nav flex-column list-group">
-    <li class="nav-item list-group-item w-25"><a class="nav-link text-left" *ngFor="let i of items" [routerLink]="i.ruta">{{i.nombre}}</a></li>
+    <li class="nav-item list-group-item"><a class="nav-link text-left" *ngFor="let i of items" [routerLink]="i.ruta">{{i.nombre}}</a></li>
 </ul>
